# virtualpet-wasm

./: Cargo.toml  README.md  index.html  sw.js  virtualpet_wasm.js  virtualpet_wasm_bg.wasm
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  lib.rs  main.rs
